// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemPrice /> should render with props cards type 1`] = `
<ItemPrice
  measure="Р / пог. м"
  price={15}
  priceOld={20}
  unitPrice={421}
  viewType="column"
  wholesaleProps={
    Object {
      "price": 14,
    }
  }
>
  <div
    className="wrapper column"
  >
    <Box
      alignItems="center"
      display="flex"
    >
      <div
        className="display-flex align-items-center"
      >
        <Box
          marginRight={2}
        >
          <div
            className="M-r__2"
          >
            <ForwardRef(Text)
              color="gray87"
              lineHeight={24}
              size={14}
              weight={600}
            >
              <span
                className="size-14 line-height-24 color__gray87 weight-600"
              >
                <Price
                  value={15}
                >
                  <span
                    className="root"
                  >
                    15
                  </span>
                </Price>
              </span>
            </ForwardRef(Text)>
          </div>
        </Box>
        <span
          className="price-old column"
        >
          <ForwardRef(Text)
            color="gray38"
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              <Price
                crossedOut={true}
                value={20}
              >
                <span
                  className="root crossed-out"
                >
                  20
                </span>
              </Price>
            </span>
          </ForwardRef(Text)>
        </span>
      </div>
    </Box>
    <span
      className="price-unit"
    >
      <ForwardRef(Text)
        color="gray38"
        lineHeight={24}
        size={16}
        weight={600}
      >
        <span
          className="size-16 line-height-24 color__gray38 weight-600"
        >
          <Price
            currencyGrapheme="Р / пог. м"
            value={421}
          >
            <span
              className="root"
            >
              421 Р / пог. м
            </span>
          </Price>
        </span>
      </ForwardRef(Text)>
    </span>
  </div>
</ItemPrice>
`;

exports[`<ItemPrice /> should render with props list type 1`] = `
<ItemPrice
  measure="Р / пог. м"
  price={15}
  priceOld={20}
  unitPrice={421}
  viewType="row"
  wholesaleProps={
    Object {
      "price": 14,
    }
  }
>
  <div
    className="wrapper row"
  >
    <Box
      alignItems="center"
      display="flex"
    >
      <div
        className="display-flex align-items-center"
      >
        <Box
          marginRight={2}
        >
          <div
            className="M-r__2"
          >
            <ForwardRef(Text)
              color="gray87"
              lineHeight={24}
              size={16}
              weight={600}
            >
              <span
                className="size-16 line-height-24 color__gray87 weight-600"
              >
                <Price
                  value={15}
                >
                  <span
                    className="root"
                  >
                    15
                  </span>
                </Price>
              </span>
            </ForwardRef(Text)>
          </div>
        </Box>
        <span
          className="price-old row"
        >
          <ForwardRef(Text)
            color="gray38"
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              <Price
                crossedOut={true}
                value={20}
              >
                <span
                  className="root crossed-out"
                >
                  20
                </span>
              </Price>
            </span>
          </ForwardRef(Text)>
        </span>
      </div>
    </Box>
    <span
      className="price-unit"
    >
      <ForwardRef(Text)
        color="gray38"
        lineHeight={24}
        size={16}
        weight={600}
      >
        <span
          className="size-16 line-height-24 color__gray38 weight-600"
        >
          <Price
            currencyGrapheme="Р / пог. м"
            value={421}
          >
            <span
              className="root"
            >
              421 Р / пог. м
            </span>
          </Price>
        </span>
      </ForwardRef(Text)>
    </span>
  </div>
</ItemPrice>
`;

exports[`<ItemPrice /> should render without props 1`] = `
<ItemPrice>
  <div
    className="wrapper"
  >
    <Box
      alignItems="center"
      display="flex"
    >
      <div
        className="display-flex align-items-center"
      />
    </Box>
  </div>
</ItemPrice>
`;
